Fix mobile centering: remove padding-bottom 3px override
Mobile media query added 3px bottom padding which pushed wrappers
3px off-center (align-self: center centers within content area,
not including padding). No longer needed with flexbox centering.

--- a/src/folder.view3/usr/local/emhttp/plugins/folder.view3/styles/docker.css
+++ b/src/folder.view3/usr/local/emhttp/plugins/folder.view3/styles/docker.css
@@ -516,10 +516,4 @@ div.folder-preview-4 span.outer {
     background-color: var(--fv3-hover-bg);
 }
 
-/* --- Mobile / Narrow Screen --- */
-@media (max-width: 768px) {
-    .folder-preview:not(.fv3-overflow-expand):not(.fv3-overflow-scroll) {
-        padding-bottom: 3px;
-    }
-}
 
