--- a/src/folder.view3/usr/local/emhttp/plugins/folder.view3/styles/vm.css
+++ b/src/folder.view3/usr/local/emhttp/plugins/folder.view3/styles/vm.css
@@ -196,10 +196,4 @@ div.folder-preview-4 span.outer{
     margin-left: 0.5em;
 }
 
-/* --- Mobile / Narrow Screen --- */
-@media (max-width: 768px) {
-    .folder-preview:not(.fv3-overflow-expand):not(.fv3-overflow-scroll) {
-        padding-bottom: 3px;
-    }
-}
 
